<resources>
    <string name="app_name">Easy N5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="alphabet">Alphabet</string>
    <string name="shuffle">Shuffle</string>
    <string name="notification_channel_description">Notification</string>
    <string name="notification_channel_name">Notification</string>
    <string name="default_notification_channel">default_channel</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="kata_hira">KataHira</string>
    <string name="kanji">Kanji</string>
    <string name="meaning">Ý nghĩa</string>
    <string name="a_jp">あ</string>
    <string name="a_latin">a</string>
    <string name="learn">Học bảng chữ cái %s!</string>
    <string name="unit_one">1</string>
    <string name="unit">Minna No Nihongo</string>
    <string name="know_writing_system">Làm quen với hệ thống chữ viết chính trong tiếng Nhật</string>
    <string name="home_title">Từ vựng 25 bài Minna No Nihongo</string>
    <string name="vocabulary">Từ vựng</string>
    <string name="alphabet_board">Bảng chữ cái</string>
    <string name="revise">Ôn tập</string>
    <string name="sound">đọc</string>
    <string name="unit_number">%s</string>
    <string name="alphabet_guess_game">Chọn đúng ký tự cho từ sau:</string>
    <string name="vocabulary_guess_game">Chọn nghĩa đúng cho từ sau:</string>
    <string name="check">Kiểm tra</string>
    <string name="game_hira">Bảng chữ cái Hiragana</string>
    <string name="game_kata">Bảng chữ cái Katakana</string>
    <string name="game_hi_ka">Tổng hợp 2 bảng chữ cái</string>
    <string name="game_all_vol">Tất cả từ vựng</string>
    <string name="game_single_vol">Từ vựng theo bài</string>
    <string name="dakuon">Dakuon</string>
    <string name="combo">Combo</string>
    <string name="small">Small</string>
    <string name="long_vowel">Long vowel</string>
    <string name="main_explain_hira">Làm quen với hệ thống chữ viết chính trong tiếng Nhật</string>
    <string name="main_explain_kata">Làm quen với các ký tự được sử dụng cho từ mượn trong tiếng Nhật</string>
    <string name="dakuon_explain">Thêm một biểu tượng để thay đổi âm</string>
    <string name="combo_explain">Thêm các ký tự nhỏ để tạo âm tiết mới</string>
    <string name="small_explain">Gấp đôi phụ âm sau</string>
    <string name="scale_progress_percent">100%</string>
    <string name="result_score">Số điểm đạt được</string>
    <string name="button_ok">OK!</string>
    <string name="button_play_again">Chơi lại!</string>
    <string name="full_point">100</string>
    <string name="voca_question_game">Từ mới: %s</string>
    <string name="kanji_question_game">Kanji: %s</string>
    <string name="dialog_mess">Bạn muốn thoát trò chơi à ?</string>
    <string name="dialog_no">Nghỉ thôi!</string>
    <string name="dialog_yes">Chơi tiếp!</string>
    <string name="understand">OK! Tôi hiểu rồi</string>
    <string name="instruction_turn_on_voice">Ngôn ngữ không được hỗ trợ \nVui lòng vào Cài đặt > Quản lý chung > Văn bản sang giọng nói > Ngôn ngữ > Tải và cài đặt Tiếng Nhật</string>
</resources>
