<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBackGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24" />

        <ProgressBar
            android:id="@+id/progressBarGame"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_4"
            android:max="15"
            android:progress="0"
            android:progressDrawable="@drawable/progress_bar_game" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutTop">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuestionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/vocabulary_guess_game"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuestionHira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dp_16"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp"
            tools:text="@string/voca_question_game" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuestionKanji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dp_16"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp"
            tools:text="@string/kanji_question_game" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSound"
            android:layout_width="@dimen/dp_65"
            android:layout_height="@dimen/dp_65"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/background_round_boder_blue"
            android:gravity="center_horizontal"
            android:padding="@dimen/dp_8"
            android:src="@drawable/loudspeaker"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:paddingHorizontal="@dimen/dp_8"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideLineTop"
        app:spanCount="1"
        tools:itemCount="4"
        tools:listitem="@layout/item_vocabulary_game_answer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheckAnswer"
        android:layout_width="@dimen/dp_320"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_12"
        android:background="@drawable/background_button_choose_answer"
        android:text="@string/check"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
