<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBackGuessGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24" />

        <ProgressBar
            android:id="@+id/progressBarGame"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_4"
            android:max="5"
            android:progress="0"
            android:progressDrawable="@drawable/progress_bar_game" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutTop">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuestionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_12"
            android:text="@string/alphabet_guess_game"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/a_latin"
            android:textColor="@color/black"
            android:textSize="@dimen/_28ssp"
            tools:text="@string/a_latin" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dp_16"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@id/btnCheckAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutQuestion">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <include
                android:id="@+id/layoutAnswer1"
                layout="@layout/item_alphabet_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_weight="1" />

            <include
                android:id="@+id/layoutAnswer2"
                layout="@layout/item_alphabet_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_weight="1" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <include
                android:id="@+id/layoutAnswer3"
                layout="@layout/item_alphabet_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_8"
                android:layout_weight="1" />

            <include
                android:id="@+id/layoutAnswer4"
                layout="@layout/item_alphabet_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_weight="1" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.pc.studyjapanesen5.presentation.viewcustom.CheckButton
        android:id="@+id/btnCheckAnswer"
        android:layout_width="@dimen/dp_320"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_12"
        app:enabledBackground="@drawable/background_button_choose_answer"
        app:disabledBackground="@drawable/background_answer_vocabulary_unselect"
        android:text="@string/check"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:enabled="false"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
